# mylog

./: .gitignore  CMakeLists.txt  LICENSE  README.md
config/: mylog.json
inc/: AsyncHelper.hpp  FileAppender.hpp  FileManager.hpp  LogMessage.hpp  Logger.hpp  Timestamp.hpp  asyncHelper.hpp  fileAppender.hpp  fileManager.hpp  logMessage.hpp  logger.hpp  timestamp.hpp
sample/: 0_how_to_use.cpp  1_how_to_set_level.cpp  2_how_to_change_color.cpp  2_how_to_set_stdout_colorful.cpp  3_how_to_output_file.cpp  4_how_to_output_file_in_multithread.cpp
samples/: 0_how_to_start.cpp  1_how_to_set_level.cpp  1_start.cpp  2_how_to_set_stdout_vivid.cpp  2_set_suppress_level.cpp  3_how_to_output_file.cpp  3_output_to_file.cpp  3_set_stdout_vivid.cpp  4_how_to_use_double_buffer.cpp  4_output_to_file.cpp  4_output_to_file_with_multi_buffer.cpp  5_output_to_file_with_multi_buffer.cpp  CMakeLists.txt  config.json  config.lua
src/: AsyncHelper.cpp  CMakeLists.txt  FileAppender.cpp  FileManager.cpp  LogMessage.cpp  Logger.cpp  Timestamp.cpp  asyncHelper.cpp  configer.hpp  doubleBuffer.hpp  fileAppender.cpp  fileAppender.hpp  fileManager.cpp  fileManager.hpp  logMessage.cpp  logger.cpp  logger.hpp  multiBuffer.hpp  myconfiger.hpp  mylog.cpp  timestamp.cpp  timestamp.hpp
