function(gen_elf name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE mylog)
    target_compile_options(${name} PRIVATE "-fmacro-prefix-map=${CMAKE_SOURCE_DIR}/=" -fsanitize=address -g)
    target_link_options(${name} PRIVATE -fsanitize=address)
endfunction()

gen_elf(1_a_simple_start)
gen_elf(2_set_suppress_level)
gen_elf(3_output_to_file)
gen_elf(4_output_to_file_with_multi_buffer)